tools/tests/errors/surf_num_07.ki
# Integer() of a positive infinity must throw, not truncate to garbage.
var m = import("math")
discard Integer(m.inf)
